cabal-version:      2.4
name:               AoCx2022
version:            0.1.0.0
synopsis:           Advent of Code 2022
author:              Ashwin Sekar
maintainer:          gaurjas@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable x1
    main-is:          1-calorie-counting.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      heap,
                      containers,
                      megaparsec
    default-language: Haskell2010
    default-extensions:       TupleSections
                      ViewPatterns

executable x2
    main-is:          2-rock-paper-scissors.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      heap,
                      containers,
                      megaparsec
    default-language: Haskell2010
    default-extensions:       TupleSections
                      ViewPatterns

executable x3
    main-is:          3-rucksack-reorganization.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      heap,
                      containers,
                      megaparsec
    default-language: Haskell2010
    default-extensions:       TupleSections
                      ViewPatterns

executable x4
    main-is:          4-camp-cleanup.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      heap,
                      containers,
                      megaparsec
    default-language: Haskell2010
    default-extensions:       TupleSections
                      ViewPatterns

executable x5
    main-is:          5-supply-stacks.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      heap,
                      containers,
                      megaparsec
    default-language: Haskell2010
    default-extensions:       TupleSections
                      ViewPatterns

executable x6
    main-is:          6-tuning-trouble.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      heap,
                      containers,
                      megaparsec
    default-language: Haskell2010
    default-extensions:       TupleSections
                      ViewPatterns

executable x7
    main-is:          7-no-space-left-on-device.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      heap,
                      containers,
                      megaparsec
    default-language: Haskell2010
    default-extensions:       TupleSections
                      ViewPatterns

executable x8
    main-is:          8-treetop-tree-house.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      heap,
                      containers,
                      megaparsec
    default-language: Haskell2010
    default-extensions:       TupleSections
                      ViewPatterns

executable x10
    main-is:          10-cathode-ray-tube.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      heap,
                      containers,
                      megaparsec
    default-language: Haskell2010
    default-extensions:       TupleSections
                      ViewPatterns

executable x11
    main-is:          11-monkey-in-the-middle.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      heap,
                      containers,
                      megaparsec
    default-language: Haskell2010
    default-extensions:       TupleSections
                      ViewPatterns

executable x12
    main-is:          12-hill-climbing-algorithm.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      heap,
                      containers,
                      megaparsec
    default-language: Haskell2010
    default-extensions:       TupleSections
                      ViewPatterns

executable x14
    main-is:            14-regolith-reservoir.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        heap,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections
                        ViewPatterns

executable x15
    main-is:            15-beacon-exclusion-zone.hs
    ghc-options:        -Wunused-binds -Wunused-imports -Worphans
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        heap,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections
                        ViewPatterns

executable x21
    main-is:          21-monkey-math.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      heap,
                      containers,
                      megaparsec,
                      extra
    default-language: Haskell2010
    default-extensions:       TupleSections
                      ViewPatterns
